--- a/app/src/main/res/layout/activity_department.xml
+++ b/app/src/main/res/layout/activity_department.xml
@@ -10,7 +10,7 @@
     tools:context=".DepartmentActivity">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editTextDepartment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:width="300dp"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:text="@string/addDepartment"
         android:onClick="addDepartment"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/editTextDepartment"
         />
 
     <ListView
