--- a/app/src/main/res/layout/activity_add_department.xml
+++ b/app/src/main/res/layout/activity_add_department.xml
@@ -7,22 +7,20 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DepartmentActivity">
+    tools:context="com.assignment.departments.AddDepartmentActivity">
 
-
-    <Button
-        android:id="@+id/buttonAdd"
+    <EditText
+        android:id="@+id/editTextDepartment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/addDepartment"
-        android:onClick="addDepartment"
+        android:width="300dp"
         />
-
-    <ListView
-        android:id="@+id/listViewDepartment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/buttonAdd"
-        android:longClickable="true"
+    <Button
+        android:id="@+id/buttonAddDepartment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextDepartment"
+        android:text="@string/addDepartment"
+        android:onClick="buttonAddDepartment"
         />
 </RelativeLayout>
