--- a/app/src/main/res/layout/activity_add_employee.xml
+++ b/app/src/main/res/layout/activity_add_employee.xml
@@ -7,22 +7,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DepartmentActivity">
+    tools:context="com.assignment.departments.AddEmployeeActivity">
 
-
-    <Button
-        android:id="@+id/buttonAdd"
+    <EditText
+        android:id="@+id/editTextEmployee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/addDepartment"
-        android:onClick="addDepartment"
+        android:width="350dp"
         />
 
-    <ListView
-        android:id="@+id/listViewDepartment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/buttonAdd"
-        android:longClickable="true"
+    <Button
+        android:id="@+id/addEmployee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextEmployee"
+        android:text="@string/addEmployee"
+        android:onClick="buttonAddEmployee"
         />
 </RelativeLayout>
